# cmake_study

./: .gitignore  README.md
01_basic/: .gitignore
01_basic/01_hello/: CMakeLists.txt  hello.cpp
01_basic/02_header/: CMakeLists.txt
01_basic/02_header/src/: Hello.cpp  main.cpp
01_basic/03_static_lib/: CMakeLists.txt
01_basic/03_static_lib/src/: Hello.cpp  main.cpp
01_basic/04_shared_lib/: CMakeLists.txt
01_basic/04_shared_lib/src/: Hello.cpp  main.cpp
01_basic/05_installing/: CMakeLists.txt
01_basic/05_installing/inc/: Hello.h
01_basic/05_installing/src/: Hello.cpp  main.cpp
01_basic/06_build_types/: CMakeLists.txt  build_type.cpp
01_basic/ex_find_lib/: CMakeLists.txt
01_basic/ex_find_lib/test_lib/: CMakeLists.txt
01_basic/ex_find_lib2/: CMakeLists.txt  test.cpp
01_basic/ex_find_lib2/img_io/: CMakeLists.txt
01_basic/ex_find_lib2/img_io/inc/: img_io.h
01_basic/ex_import_lib/: CMakeLists.txt  test.cpp
01_basic/ex_import_lib/test_lib/: CMakeLists.txt  io.cmake  mark.cmake
01_basic/ex_import_lib/test_lib/inc/: img_mark.h
02_sub_projects/01_basic/: CMakeLists.txt
02_sub_projects/01_basic/execution/: CMakeLists.txt  main.cpp
02_sub_projects/01_basic/header_lib/: CMakeLists.txt
02_sub_projects/01_basic/header_lib/inc/h1/: h1.h
02_sub_projects/01_basic/static_lib/: CMakeLists.txt
02_sub_projects/01_basic/static_lib/inc/lib_a/: lib_a.h
02_sub_projects/01_basic/static_lib/src/: lib_a.cpp
02_sub_projects/ex_dual_use_lib/: CMakeLists.txt
02_sub_projects/ex_dual_use_lib/test_app/: CMakeLists.txt  main.cpp
02_sub_projects/ex_dual_use_lib/test_lib/: .gitignore  CMakeLists.txt  pro_link.cmake
02_sub_projects/ex_dual_use_lib/test_lib/inc/: test_lib.h
02_sub_projects/ex_dual_use_lib/test_lib/src/: test_lib.cpp
c++_demo/thread/: CMakeLists.txt  main.cpp
qt/cmake_test/: CMakeLists.txt
qt/cmake_test/src/: CMakeLists.txt  main.cpp
qt/cmake_test/src/module1/: CMakeLists.txt  module1.cpp
qt/cmake_test/src/module2/: CMakeLists.txt  module2.cpp
test_lib/test/: CMakeLists.txt  main.cpp
test_static/: CMakeLists.txt
test_static/inc/: Class1.h  Class2.h  common.h
test_static/src/: Class1.cpp  Class2.cpp  common.cpp  main.cpp
